# auto-forex-core

./: .gitattributes  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
src/core/: __init__.py  clock.py  logging.py  providers.py
src/core/accounts/: __init__.py  base.py  models.py
src/core/brokers/: __init__.py  base.py  models.py
src/core/events/: __init__.py  aggregation.py  bus.py  errors.py  event.py  handlers.py  history.py  pending_strategy.py  routing.py  strategy.py  strategy_correlation.py  types.py
src/core/models/: __init__.py  account.py  accounts.py  base.py  brokers.py  identifiers.py  mapping.py  market.py  metadata.py  money.py  strategy.py  values.py
src/core/orders/: __init__.py  closing.py  executor.py  factory.py  handlers.py  matching.py
src/core/ports/: __init__.py  accounts.py  broker.py  brokers.py  source.py  strategy.py
src/core/results/: __init__.py  buffering.py  ledger.py  mapping.py  metrics.py  models.py  money_aggregation.py  recorder.py  store_contracts.py  store_csv.py  store_memory.py  store_rows.py  store_sql.py  store_sql_schema.py  stores.py  trade_state.py  writer.py
src/core/sources/: __init__.py  base.py  csv.py  csv_errors.py  csv_mapping.py  csv_parsing.py  csv_paths.py  csv_rows.py  csv_streaming.py  filters.py  models.py
src/core/strategies/: __init__.py  base.py  execution.py  models.py
tests/: test_core.py
tests/e2e/: test_backtest_hold_flow.py  test_forex_quotes_task_flow.py
tests/integration/: test_csv_market_data.py  test_strategy_broker_flow.py  test_task_lifecycle_logging.py
(+70 files in other folders)
