[project]
name = "auto-forex-core"
version = "0.1.0"
description = "A Python package for automating forex trading strategies."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.5.0",
    "pandas>=3.0.3",
    "pycountry>=26.2.16",
    "pydantic>=2.13.4",
]

[build-system]
requires = ["uv_build>=0.9.24,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "core"

[dependency-groups]
dev = ["pre-commit>=4.6.0", "pytest>=9.1.1", "ruff>=0.15.20", "ty>=0.0.55"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py314"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "RUF", "UP"]

[tool.ruff.format]
indent-style = "space"
line-ending = "lf"
quote-style = "double"

[tool.pytest.ini_options]
addopts = [
    "-ra",
    "--strict-config",
    "--strict-markers",
    "--import-mode=importlib",
]
testpaths = ["tests"]

[tool.ty.environment]
python-version = "3.14"
